# multi-agent-content-creation-system

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/multi_agent_content_creation_system/: crew.py  main.py
src/multi_agent_content_creation_system/config/: agents.yaml  tasks.yaml
