[project]
name = "multi_agent_content_creation_system"
version = "0.1.0"
description = "multi_agent_content_creation_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
    "pydantic",
]

[project.scripts]
multi_agent_content_creation_system = "multi_agent_content_creation_system.main:run"
run_crew = "multi_agent_content_creation_system.main:run"
train = "multi_agent_content_creation_system.main:train"
replay = "multi_agent_content_creation_system.main:replay"
test = "multi_agent_content_creation_system.main:test"
run_with_trigger = "multi_agent_content_creation_system.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
